# system_test

./: .gitignore  pyproject.toml
src/ingoread_test/: __init__.py  cli.py
src/ingoread_test/config/: __init__.py  loader.py  scorer_config.py  test_config.py
src/ingoread_test/dataset/: __init__.py  loader.py  models.py
src/ingoread_test/integration/: __init__.py  base.py  http.py  schemas.py  stub.py
src/ingoread_test/modules/: __init__.py  historical_scorer.py  logger_module.py  scorer_module.py  test_module.py  visualization_module.py
src/ingoread_test/results/: __init__.py  models.py
src/ingoread_test/scoring/: __init__.py  document_scorer.py  field_scorers.py  pairing.py
