[project]
name = "ingoread-test"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"

authors = []

dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",
    "scipy>=1.13",
    "pyyaml>=6.0",
    "typer>=0.12",
    "jiwer>=3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
